# holoscan-sdk-hello-world

docker/: .env  Dockerfile  docker-compose.yaml  setup.txt
docker/scripts/: build.sh  run-ssh.sh
ws/: CMakeLists.txt
ws/src/: ConsoleSinkOp.cpp  ConsoleSinkOp.h  CustomBinApp.cpp  CustomBinApp.h  CustomProcessingBin.cpp  CustomProcessingBin.h  RandomGeneratorOp.cpp  RandomGeneratorOp.h  config.yaml  main.cpp
ws/src/app/: CustomBinApp.cpp  CustomBinApp.h
ws/src/fragments/custom/: CustomFragment.cpp  CustomFragment.h
ws/src/fragments/custom/ops/: RandomGeneratorOp.cpp  RandomGeneratorOp.h  SumOp.cpp  SumOp.h
ws/src/fragments/output/: OutputFragment.cpp  OutputFragment.h
ws/src/fragments/output/ops/: ConsoleSinkOp.cpp  ConsoleSinkOp.h
